bee-common/bee-common-derive/tests/packable/fail/invalid_tag_type_enum.stderr
error: Tags for enums can only be unsigned, sized integers.
  --> $DIR/invalid_tag_type_enum.rs:11:23
   |
11 | #[packable(tag_type = [u8; 32])]
   |                       ^^^^^^^^
